# npm-package-explorer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.npm-package-explorer.config.toml
src/: cache.rs  coalescer.rs  common.rs  config.rs  error.rs  main.rs  npm_registry.rs  request.rs
src/routes/: badge.rs  index.rs  list_versions.rs  mod.rs  show.rs
static/files/: style.css
static/templates/: index.html
