[package]
name = "npm-package-explorer"
version = "0.1.0"
authors = ["dkamyshov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0" 
actix-web = "3.3.2"
badgen = "0.1.0"
chrono = "0.4.19"
derive_more = "0.99.16"
env_logger = "0.9.0"
flate2 = "1.0.20"
handlebars = { version = "4.1.2", features = ["dir_source"] }
log = "0.4.14"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = [ "blocking" ] }
semver = "1.0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
tar = "0.4.37"
thiserror = "1.0.26"
timeago = "0.3.0"
toml = "0.5.8"
url = "2.2.2"
urlencoding = "2.1.0"
