[package]
name = "npm-package-explorer"
version = "0.2.0"
authors = ["dkamyshov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
badgen = "0.1.0"
bus = "2.2.3"
chrono = "0.4.19"
env_logger = "0.9.0"
flate2 = "1.0.20"
handlebars = { version = "4.1.2", features = ["dir_source"] }
log = "0.4.14"
rand = "0.8.5"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = [ "blocking" ] }
rouille = "3.3.1"
semver = "1.0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
tar = "0.4.37"
thiserror = "1.0.26"
timeago = "0.3.0"
toml = "0.5.8"
url = "2.2.2"
urlencoding = "2.1.0"
